--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton+SC&family=Archivo+Black&family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&family=Lora:ital,wght@0,400..700;1,400..700&family=Tiny5&display=swap');
 body{
-    background-color: ;
+    margin: 0px;
+    background-color: rgb(230, 183, 112);
 }
 
 header{
-    margin: 20px;
+    padding: 30px;
     text-align: center;
+    background-image: url(resourse/360_F_625254822_ZnId6bB60hqC9WXH1uEzViKtLznxHv6t.jpg);
+    background-repeat:repeat;
+    color: rgb(255, 254, 237);
+    font-size: 30px;
+    font-family: "Archivo Black", sans-serif;
+    filter:opacity(85%); 
 }
+
