--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton+SC&family=Archivo+Black&family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&family=Lora:ital,wght@0,400..700;1,400..700&family=Tiny5&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Ultra&display=swap');
 body{
     margin: 0px;
-    background-color: rgb(255, 207, 134);
+    background-color: rgb(251, 212, 154);
 }
 
 header{
@@ -18,9 +19,14 @@ header{
 
 fieldset{
     padding: 30px;
-    background-color: rgb(255, 245, 213);
+    background-color: rgb(253, 248, 228);
     border: 1px solid rgb(255, 245, 213);
     border-radius: 20px;
+}
+
+div{
+    margin: auto;
+    width: 350px;
 }
 
 legend{
@@ -30,9 +36,13 @@ legend{
 }
 
 form{
-    padding-left: 10%;    
-    padding-right: 10%;
-    padding-top: 5%;
+    margin: auto;
+    width: 600px;
+    padding-top: 4%;
+    padding-bottom: 4%;
+    line-height: 2.5;
+    font-family: "Roboto", sans-serif;;
+
 }
 
 label b{
