--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Ultra&display=swap');
 body{
     margin: 0px;
-    background-color: rgb(251, 212, 154);
+    background-color: rgba(255, 217, 135, 0.833);
 }
 
 header{
@@ -34,9 +34,6 @@ legend{
     background-color: rgb(88, 188, 255);
     padding: 14px 40px;
     border-radius: 40px;
-    border-style:dashed;
-    border-width: 2.5px;
-    border-color: hsl(209, 88%, 60%);
     color: rgb(255, 255, 255);
     font-size: 17px;
 
@@ -57,6 +54,21 @@ label b{
     color: red;
 }
 
-label #agree{
-    text-align: center;
+input[type="submit"]{
+    background-color: rgb(88, 188, 255);
+    color: white;
+    border: 1px solid rgb(6, 149, 226);
+    padding: 10px 25px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    display: flex;
+}
+
+input[type="radio"]{
+    cursor: pointer;
+}
+
+input[type="checkbox"]{
+    cursor: pointer;
 }
